# website_server_sudoku

./: README.md
backend/: Cargo.toml
backend/src/: main.rs
backend/src/api/: make_sudoku.rs  mod.rs  sudoku.rs  task.rs  web_pages.rs
frontend/: homepage.html  homepage.js  startpage.css  startpage.html  startpage.js
