[package]
name = "app-server-sudoku"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "^4"
uuid = {version = "^0.8", features =["v4"]}
serde = {version = "^1", features = ["derive"]}
env_logger = "^0.10"
log = "^0.4"
rand = "0.8"